Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -6,6 +6,12 @@ sidebar_position: 4
 
 ## v7.4.0 (beta)
 
+### New commands
+
+**Entra ID**
+
+- [entra administrativeunit roleassignment add](../cmd/entra/administrativeunit/administrativeunit-roleassignment-add.mdx) - assigns a Microsoft Entra role with administrative unit scope to a user [#5671](https://github.com/pnp/cli-microsoft365/issues/5671)
+
 ### Changes
 
 - extended [pa app get](../cmd/pa/app/app-get) command with support to run as admin [#5518](https://github.com/pnp/cli-microsoft365/issues/5518)
@@ -17,6 +23,7 @@ sidebar_position: 4
 - updated build workflow to run on Node@20 [#5743](https://github.com/pnp/cli-microsoft365/issues/5743)
 - fixed issue where short options were included as unknown options [#5750](https://github.com/pnp/cli-microsoft365/issues/5750)
 - fixed admonitions being inproperly displayed in terminal [#5746](https://github.com/pnp/cli-microsoft365/issues/5746)
+- added the ability to use a proxy [#2698](https://github.com/pnp/cli-microsoft365/issues/2698)
 
 ## [v7.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.3.0)
 
