addressed additional review comments

--- a/docs/docs/cmd/file/file-copy.mdx
+++ b/docs/docs/cmd/file/file-copy.mdx
@@ -48,7 +48,7 @@ m365 file copy --webUrl https://contoso.sharepoint.com --sourceUrl "https://cont
 Copy a file to a document library in another site collection and rename the file
 
 ```sh
-m365 file copy --webUrl https://contoso.sharepoint.com --sourceUrl "/Shared Documents/Document.pdf" --targetUrl "/sites/IT/Shared Documents" --newName "newName.pdf"
+m365 file copy --webUrl https://contoso.sharepoint.com --sourceUrl "/Shared Documents/Document.pdf" --targetUrl "/sites/IT/Shared Documents" --newName "newName"
 ```
 
 Copy a file to a document library in another site collection and rename the file if a file with the same name already exists.
