Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -12,6 +12,10 @@ sidebar_position: 4
 
 - [entra administrativeunit roleassignment add](../cmd/entra/administrativeunit/administrativeunit-roleassignment-add.mdx) - assigns a Microsoft Entra role with administrative unit scope to a user [#5671](https://github.com/pnp/cli-microsoft365/issues/5671)
 
+**External content:**
+
+- [external connection urltoitemresolver add](../cmd/external/connection/connection-urltoitemresolver-add.mdx) - adds a URL to item resolver to an external connection [#5527](https://github.com/pnp/cli-microsoft365/issues/5527)
+
 ### Changes
 
 - extended [pa app get](../cmd/pa/app/app-get) command with support to run as admin [#5518](https://github.com/pnp/cli-microsoft365/issues/5518)
@@ -24,6 +28,7 @@ sidebar_position: 4
 - fixed issue where short options were included as unknown options [#5750](https://github.com/pnp/cli-microsoft365/issues/5750)
 - fixed admonitions being inproperly displayed in terminal [#5746](https://github.com/pnp/cli-microsoft365/issues/5746)
 - added the ability to use a proxy [#2698](https://github.com/pnp/cli-microsoft365/issues/2698)
+- extends 'teams user app add' command with support for specifying name of the app [#5703](https://github.com/pnp/cli-microsoft365/issues/5703)
 
 ## [v7.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.3.0)
 
