New command: outlook message remove

--- a/docs/docs/cmd/outlook/message/message-remove.mdx
+++ b/docs/docs/cmd/outlook/message/message-remove.mdx
@@ -32,7 +32,7 @@ m365 outlook message remove [options]
 
 :::info
 
-This command will permanently delete the Outlook message. To move a message to the trash bin, use [outlook message move](https://pnp.github.io/cli-microsoft365/cmd/outlook/message/message-move) instead.
+This command will permanently delete the Outlook message. To move a message to the trash bin, use [outlook message move](./message-move.mdx) instead.
 
 :::
 
