--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -28,7 +28,9 @@ sidebar_position: 4
 - fixed issue where short options were included as unknown options [#5750](https://github.com/pnp/cli-microsoft365/issues/5750)
 - fixed admonitions being inproperly displayed in terminal [#5746](https://github.com/pnp/cli-microsoft365/issues/5746)
 - added the ability to use a proxy [#2698](https://github.com/pnp/cli-microsoft365/issues/2698)
-- extends 'teams user app add' command with support for specifying name of the app [#5703](https://github.com/pnp/cli-microsoft365/issues/5703)
+- extended 'teams user app add' command with support for specifying name of the app [#5703](https://github.com/pnp/cli-microsoft365/issues/5703)
+- extended 'm365 flow run get' with the ability to retrieve the action information [#1828](https://github.com/pnp/cli-microsoft365/issues/1828)
+- updated 'spo group member add', 'spo group member remove', and 'spo user ensure' commands options [#5745](https://github.com/pnp/cli-microsoft365/issues/5745)
 
 ## [v7.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.3.0)
 
