Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -31,6 +31,7 @@ sidebar_position: 4
 - extended 'teams user app add' command with support for specifying name of the app [#5703](https://github.com/pnp/cli-microsoft365/issues/5703)
 - extended 'm365 flow run get' with the ability to retrieve the action information [#1828](https://github.com/pnp/cli-microsoft365/issues/1828)
 - updated 'spo group member add', 'spo group member remove', and 'spo user ensure' commands options [#5745](https://github.com/pnp/cli-microsoft365/issues/5745)
+- fixed spo folder commands don't support folders with numerical names ending [#5789](https://github.com/pnp/cli-microsoft365/issues/5789)
 
 ## [v7.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.3.0)
 
