Fixes issue with adding permissions. Closes #5802

--- a/docs/docs/cmd/entra/app/app-permission-add.mdx
+++ b/docs/docs/cmd/entra/app/app-permission-add.mdx
@@ -60,7 +60,7 @@ m365 entra app permission add --appObjectId 'e0306bb2-bf0b-4cc5-a845-a0b2cf11f69
 Grant multiple app-only permissions to an Entra (Azure AD) app specified by client id and grant admin consent
 
 ```sh
-m365 entra app permission add --appId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690' --applicationPermissions 'https://graph.microsoft.com/Sites.FullControl.All https://microsoft.sharepoint-df.com/Sites.FullControl.All' --grandAdminConsent
+m365 entra app permission add --appId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690' --applicationPermissions 'https://graph.microsoft.com/Sites.FullControl.All https://microsoft.sharepoint-df.com/Sites.FullControl.All' --grantAdminConsent
 ```
 
 ## Response
