--- a/docs/docs/cmd/spo/user/user-remove.mdx
+++ b/docs/docs/cmd/spo/user/user-remove.mdx
@@ -22,6 +22,18 @@ m365 spo user remove [options]
 `--loginName [loginName]`
 : Login name of the site user to remove
 
+`--userName [userName]`
+: User name of the site user to remove
+
+`--email [email]`
+: Email of the site user to remove
+
+`--entraGroupId [entraGroupId]`
+: Object ID of the Entra group ID to remove
+
+`--entraGroupName [entraGroupName]`
+: Name of the Entra group to remove
+
 `-f, --force`
 : Do not prompt for confirmation before removing user from web
 ```
@@ -30,7 +42,7 @@ m365 spo user remove [options]
 
 ## Remarks
 
-Use either `id` or `loginName`, but not both
+Use only one of those options: `id` or `loginName` or `email`, `userName`, `entraGroupId`, or `entraGroupName`
 
 ## Examples
 
@@ -46,6 +58,29 @@ Removes user with login name _i:0#.f|membership|john.doe@mytenant.onmicrosoft.co
 m365 spo user remove --webUrl "https://contoso.sharepoint.com/sites/HR" --loginName "i:0#.f|membership|john.doe@mytenant.onmicrosoft.com"
 ```
 
+Removes user with user name _john.doe_hotmail.com#ext#@mytenant.onmicrosoft.com_ from a web
+
+```sh
+m365 spo user remove --webUrl "https://contoso.sharepoint.com/sites/HR" --userName "john.doe_hotmail.com#ext#@mytenant.onmicrosoft.com"
+```
+
+Removes user with email _john.doe@mytenant.onmicrosoft.com_ from a web
+
+```sh
+m365 spo user remove --webUrl "https://contoso.sharepoint.com/sites/HR" --email "john.doe@mytenant.onmicrosoft.com"
+```
+
+Removes user with entraGroupId _f832a493-de73-4fef-87ed-8c6fffd91be6_ from a web
+
+```sh
+m365 spo user remove --webUrl "https://contoso.sharepoint.com/sites/HR" --entraGroupId f832a493-de73-4fef-87ed-8c6fffd91be6
+```
+
+Removes user with entraGroupName "Test Members" from a web
+
+```sh
+m365 spo user remove --webUrl _https://contoso.sharepoint.com/sites/HR_ --entraGroupName "Test Members"
+```
 ## Response
 
 The command won't return a response on success.
