--- a/docs/docs/cmd/entra/app/app-permission-list.mdx
+++ b/docs/docs/cmd/entra/app/app-permission-list.mdx
@@ -33,6 +33,10 @@ m365 aad app permission list [options]
 
 <Global />
 
+## Remarks
+
+For best performance use the `objectId` option to reference the Entra application registration to get. If you use `appId`, this command will first need to find the corresponding object ID for that application.
+
 ## Examples
 
 Retrieves all permissions for an Entra app registration
