--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-roleassignment-add.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-roleassignment-add.mdx
@@ -12,6 +12,12 @@ Assigns a Microsoft Entra role with administrative unit scope to a user
 m365 entra administrativeunit roleassignment add [options]
 ```
 
+## Alias
+
+```sh
+m365 aad administrativeunit roleassignment add [options]
+```
+
 ## Options
 
 ```md definition-list
