Renames 'entra sp' to 'entra enterpriseapp'. Closes #5680

--- a/docs/docs/about/comparison-powershell.mdx
+++ b/docs/docs/about/comparison-powershell.mdx
@@ -213,7 +213,7 @@ Add-PnPApplicationCustomizer|PnP.PowerShell|[spo applicationcustomizer add](../c
 Add-PnPAvailableSiteClassification|PnP.PowerShell|[entra siteclassification enable](../cmd/entra/siteclassification/siteclassification-enable.mdx)
 Add-PnPAzureADGroupMember|PnP.PowerShell|[entra m365group user add](../cmd/entra/m365group/m365group-user-add.mdx)
 Add-PnPAzureADGroupOwner|PnP.PowerShell|[entra m365group user add](../cmd/entra/m365group/m365group-user-add.mdx)
-Add-PnPAzureADServicePrincipalAppRole|PnP.PowerShell|[entra sp add](../cmd/entra/sp/sp-add.mdx)
+Add-PnPAzureADServicePrincipalAppRole|PnP.PowerShell|[entra enterpriseapp add](../cmd/entra/enterpriseapp/enterpriseapp-add.mdx)
 Add-PnPContentType|PnP.PowerShell|[spo contenttype add](../cmd/spo/contenttype/contenttype-add.mdx)
 Add-PnPContentTypesFromContentTypeHub|PnP.PowerShell|
 Add-PnPContentTypeToDocumentSet|PnP.PowerShell|
@@ -354,7 +354,7 @@ Get-PnPAzureADAppSitePermission|PnP.PowerShell|[spo site apppermission list](../
 Get-PnPAzureADGroup|PnP.PowerShell|[entra group list](../cmd/entra/group/group-list.mdx)
 Get-PnPAzureADGroupMember|PnP.PowerShell|[entra m365group user list](../cmd/entra/m365group/m365group-user-list.mdx)
 Get-PnPAzureADGroupOwner|PnP.PowerShell|[entra m365group user list](../cmd/entra/m365group/m365group-user-list.mdx)
-Get-PnPAzureADServicePrincipal|PnP.PowerShell|[entra sp get](../cmd/entra/sp/sp-get.mdx)
+Get-PnPAzureADServicePrincipal|PnP.PowerShell|[entra enterpriseapp get](../cmd/entra/enterpriseapp/enterpriseapp-get.mdx)
 Get-PnPAzureADServicePrincipalAssignedAppRole|PnP.PowerShell|
 Get-PnPAzureADServicePrincipalAvailableAppRole|PnP.PowerShell|
 Get-PnPAzureADUser|PnP.PowerShell|[entra user get](../cmd/entra/user/user-get.mdx)
