--- a/docs/docs/cmd/entra/app/app-permission-add.mdx
+++ b/docs/docs/cmd/entra/app/app-permission-add.mdx
@@ -16,6 +16,7 @@ m365 entra app permission add [options]
 
 ```sh
 m365 aad app permission add [options]
+m365 entra appregistration permission add [options]
 ```
 
 ## Options
