--- a/docs/docs/cmd/entra/app/app-remove.mdx
+++ b/docs/docs/cmd/entra/app/app-remove.mdx
@@ -14,6 +14,7 @@ m365 entra app remove [options]
 
 ```sh
 m365 aad app remove [options]
+m365 entra appregistration remove [options]
 ```
 
 ## Options
