--- a/docs/docs/cmd/entra/app/app-role-list.mdx
+++ b/docs/docs/cmd/entra/app/app-role-list.mdx
@@ -16,6 +16,7 @@ m365 entra app role list [options]
 
 ```sh
 m365 aad app role list [options]
+m365 entra appregistration role list [options]
 ```
 
 ## Options
