--- a/docs/docs/cmd/entra/oauth2grant/oauth2grant-list.mdx
+++ b/docs/docs/cmd/entra/oauth2grant/oauth2grant-list.mdx
@@ -29,7 +29,7 @@ m365 aad oauth2grant list [options]
 
 ## Remarks
 
-In order to list existing OAuth2 permissions granted to a service principal, you need its `objectId`. You can retrieve it using the [entra sp get](../sp/sp-get.mdx) command.
+In order to list existing OAuth2 permissions granted to a service principal, you need its `objectId`. You can retrieve it using the [entra enterpriseapp get](../enterpriseapp/enterpriseapp-get.mdx) command.
 
 When using the text output type (default), the command lists only the values of the `objectId`, `resourceId` and `scope` properties of the OAuth grant. When setting the output type to JSON, all available properties are included in the command output.
 
