--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -377,7 +377,7 @@ sidebar_position: 4
 
 **Entra ID:**
 
-- [entra sp list](../cmd/entra/sp/sp-list.mdx) - lists the service principals in the directory [#2461](https://github.com/pnp/cli-microsoft365/issues/2461)
+- [entra enterpriseapp list](../cmd/entra/enterpriseapp/enterpriseapp-list.mdx) - lists the service principals in the directory [#2461](https://github.com/pnp/cli-microsoft365/issues/2461)
 
 ### Changes
 
@@ -1566,7 +1566,7 @@ sidebar_position: 4
 ### Changes
 
 - updated 'entra oauth2grant list' to use MS Graph [#2710](https://github.com/pnp/cli-microsoft365/issues/2710)
-- updated the 'entra sp get' command to use MS Graph [#2754](https://github.com/pnp/cli-microsoft365/issues/2754)
+- updated the 'entra enterpriseapp get' command to use MS Graph [#2754](https://github.com/pnp/cli-microsoft365/issues/2754)
 - extended 'entra oauth2grant remove' with confirm [#2785](https://github.com/pnp/cli-microsoft365/issues/2785)
 - renamed clientId to spObjectId in entra oauth2grant list [#2786](https://github.com/pnp/cli-microsoft365/issues/2786)
 - fixed flow get as admin [#2984](https://github.com/pnp/cli-microsoft365/issues/2984)
@@ -1683,7 +1683,7 @@ sidebar_position: 4
 
 **Entra ID:**
 
-- [entra sp add](../cmd/entra/sp/sp-add.mdx) - adds a service principal to a registered Entra app [#2583](https://github.com/pnp/cli-microsoft365/issues/2583)
+- [entra enterpriseapp add](../cmd/entra/enterpriseapp/enterpriseapp-add.mdx) - adds a service principal to a registered Entra app [#2583](https://github.com/pnp/cli-microsoft365/issues/2583)
 
 **File:**
 
@@ -2474,7 +2474,7 @@ sidebar_position: 4
 - added suggesting upgrading dependency @microsoft/sp-http [#1516](https://github.com/pnp/cli-microsoft365/issues/1516)
 - added the 'Add custom client-side web part to modern page' sample script [#1438](https://github.com/pnp/cli-microsoft365/issues/1438)
 - added CodeTour report for spfx project upgrade [#1592](https://github.com/pnp/cli-microsoft365/issues/1592)
-- extended 'entra sp get' with --objectId option [#1567](https://github.com/pnp/cli-microsoft365/issues/1567)
+- extended 'entra enterpriseapp get' with --objectId option [#1567](https://github.com/pnp/cli-microsoft365/issues/1567)
 - removed reserved shortcut from 'entra approleassignment list' objectId option [#1607](https://github.com/pnp/cli-microsoft365/issues/1607)
 
 ## [v2.9.0](https://github.com/pnp/cli-microsoft365/releases/tag/v2.9.0)
@@ -3512,7 +3512,7 @@ sidebar_position: 4
 - entra login - log in to the Entra ID Graph [#160](https://github.com/pnp/cli-microsoft365/issues/160)
 - entra logout - log out from Entra ID Graph [#161](https://github.com/pnp/cli-microsoft365/issues/161)
 - entra status - shows Entra ID Graph login status [#162](https://github.com/pnp/cli-microsoft365/issues/162)
-- [entra sp get](../cmd/entra/sp/sp-get.mdx) - gets information about the specific service principal [#158](https://github.com/pnp/cli-microsoft365/issues/158)
+- [entra enterpriseapp get](../cmd/entra/enterpriseapp/enterpriseapp-get.mdx) - gets information about the specific service principal [#158](https://github.com/pnp/cli-microsoft365/issues/158)
 - [entra oauth2grant list](../cmd/entra/oauth2grant/oauth2grant-list.mdx) - lists OAuth2 permission grants for the specified service principal [#159](https://github.com/pnp/cli-microsoft365/issues/159)
 - [entra oauth2grant add](../cmd/entra/oauth2grant/oauth2grant-add.mdx) - grant the specified service principal OAuth2 permissions to the specified resource [#164](https://github.com/pnp/cli-microsoft365/issues/164)
 - [entra oauth2grant set](../cmd/entra/oauth2grant/oauth2grant-set.mdx) - update OAuth2 permissions for the service principal [#163](https://github.com/pnp/cli-microsoft365/issues/163)
