--- a/docs/docs/cmd/entra/app/app-role-add.mdx
+++ b/docs/docs/cmd/entra/app/app-role-add.mdx
@@ -14,6 +14,7 @@ m365 entra app role add [options]
 
 ```sh
 m365 aad app role add [options]
+m365 entra appregistration role add [options]
 ```
 
 ## Options
