--- a/docs/docs/cmd/entra/app/app-role-remove.mdx
+++ b/docs/docs/cmd/entra/app/app-role-remove.mdx
@@ -14,6 +14,7 @@ m365 entra app role remove [options]
 
 ```sh
 m365 aad app role remove [options]
+m365 entra appregistration role remove [options]
 ```
 
 ## Options
