--- a/docs/docs/v6-upgrade-guidance.mdx
+++ b/docs/docs/v6-upgrade-guidance.mdx
@@ -252,8 +252,8 @@ Command|Old option|New option
 [entra o365group recyclebinitem list](./cmd/entra/m365group/m365group-recyclebinitem-list.mdx)|`mailNickname`|`groupMailNickname`
 [entra o365group teamify](./cmd/entra/m365group/m365group-teamify.mdx)|`groupId`|`id`
 [entra policy list](./cmd/entra/policy/policy-list.mdx)|`policyType`|`type`
-[entra sp get](./cmd/entra/sp/sp-get.mdx)|`displayName`|`appDisplayName`
-[entra sp get](./cmd/entra/sp/sp-get.mdx)|`objectId`|`appObjectId`
+[entra enterpriseapp get](./cmd/entra/enterpriseapp/enterpriseapp-get.mdx)|`displayName`|`appDisplayName`
+[entra enterpriseapp get](./cmd/entra/enterpriseapp/enterpriseapp-get.mdx)|`objectId`|`appObjectId`
 [flow disable](./cmd/flow/flow-disable.mdx)|`environment`|`environmentName`
 [flow enable](./cmd/flow/flow-enable.mdx)|`environment`|`environmentName`
 [flow export](./cmd/flow/flow-export.mdx)|`environment`|`environmentName`
