--- a/docs/docs/v5-upgrade-guidance.mdx
+++ b/docs/docs/v5-upgrade-guidance.mdx
@@ -7,7 +7,7 @@ The v5 of CLI for Microsoft 365 introduces several breaking changes. To help you
 In CLI for Microsoft 365 we have commands that allow you to manage Entra apps. Some of these commands were using the Entra Graph API, which has been [deprecated](https://docs.microsoft.com/graph/migrate-azure-ad-graph-faq#how-is-microsoft-graph-different-from-azure-ad-graph-and-why-should-i-migrate-my-apps) since June 30, 2020 and which will be retired on June 30, 2022. To guarantee that the CLI for Microsoft 365 will keep working, we migrated the affected commands to use the Microsoft Graph. Here's the list of the affected commands:
 
 - [entra oauth2grant list](./cmd/entra/oauth2grant/oauth2grant-list.mdx)
-- [entra sp get](./cmd/entra/sp/sp-get.mdx)
+- [entra enterpriseapp get](./cmd/entra/enterpriseapp/enterpriseapp-get.mdx)
 
 ### What action do I need to take?
 
