--- a/docs/docs/cmd/spo/listitem/listitem-list.mdx
+++ b/docs/docs/cmd/spo/listitem/listitem-list.mdx
@@ -18,7 +18,7 @@ m365 spo listitem list [options]
 `-u, --webUrl <webUrl>`
 : URL of the site from which the item should be retrieved.
 
-`-l, --listId [listId]`
+`-i, --listId [listId]`
 : ID of the list. Specify either `listTitle`, `listId`, or `listUrl` but not multiple.
 
 `-t, --listTitle [listTitle]`
