Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,16 @@ sidebar_position: 4
 
 # Release notes
 
+## v7.5.0 (beta)
+
+### Changes
+
+- fixed [entra app permission add](../cmd/entra/app/app-permission-add.mdx) throwing an error [#5802](https://github.com/pnp/cli-microsoft365/issues/5802)
+- fixed [spfx project github workflow add](../cmd/spfx/project/project-github-workflow-add.mdx) workflow naming [#5805](https://github.com/pnp/cli-microsoft365/issues/5805)
+- added [user guide](../user-guide/using-cli-vs-code-extension.mdx) for CLI for Microsoft 365 Visual Studio Code extension [#5796](https://github.com/pnp/cli-microsoft365/issues/5796)
+- fixed incorrect short option in docs for [spo listitem list](../cmd/spo/listitem/listitem-list.mdx) command [#5822](https://github.com/pnp/cli-microsoft365/pull/5822)
+- renamed internal CLI utilities from `aad` to `entra` [#5757](https://github.com/pnp/cli-microsoft365/issues/5757)
+
 ## [v7.4.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.4.0)
 
 ### New commands
