Adds 'entra group member remove' command. Closes #5472

--- a/docs/docs/cmd/entra/group/group-member-add.mdx
+++ b/docs/docs/cmd/entra/group/group-member-add.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # entra group member add
 
-Adds a member to a Microsoft Entra ID group
+Adds members to a Microsoft Entra group
 
 ## Usage
 
