New command: entra group add

--- a/docs/docs/cmd/entra/group/group-add.mdx
+++ b/docs/docs/cmd/entra/group/group-add.mdx
@@ -27,7 +27,7 @@ m365 aad group add [options]
 `-d, --description [description]`
 : The description for the group.
 
-`-t, --type <type>`:
+`-t, --type <type>`
 : The group type. Valid values: `microsoft365` or `security`.
 
 `-m, --mailNickname [mailNickname]`
